# audio-engine

./: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  Noise.cpp  Noise.h  PureTone.h  README.md  UnknownChannelException.h  WarbleTone.h  build.py
include/: AudioEngine.h  AudioExceptions.h  ButterworthFilter.h  Noise.h  NoiseGenerator.h  PulseTone.h  PureTone.h  ToneGenerator.h  WarbleTone.h  db.h  dblut.h  engine_params.h  filter.h  frequency_cut.h  ulog.h
src/: AudioEngine.cpp  AudioExceptions.cpp  ButterworthFilter.cpp  Noise.cpp  NoiseGenerator.cpp  PulseTone.cpp  PureTone.cpp  PureTone2.cpp  ToneGenerator.cpp  UnknownChannelException.cpp  WarbleTone.cpp  filter.c  frequency_cut.c
src/AudioEngine/: AudioEngine.cpp  AudioEngine.h
src/PureTone/: PureTone.cpp  PureTone.h
src/WarbleTone/: WarbleTone.cpp  WarbleTone.h
test/: CMakeLists.txt  bindings.cpp  main.cpp  test.py
test/AudioTester/: NBN.py  Noise.py  PinkNoise.py  PulseTone.py  PureTone.py  SpeechNoise.py  Tester.py  WarbleTone.py  WhiteNoise.py  audio_engine.cp311-win_amd64.pyd  audio_engine.cp39-win_amd64.pyd  audio_engine.lib  get_audio_engine_lib.py  test_maker.py
